openshift/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.1.0

          ports:
            - name: kafka
              containerPort: 9092

          volumeMounts:
            - name: kafka-config
              mountPath: /opt/kafka/config
            
            - name: kafka-logs
              mountPath: /opt/kafka/logs

      volumes:
        - name: kafka-config
          emptyDir: {}

        - name: kafka-logs
          emptyDir: {}
