openshift/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka

  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
